applier/build/5pi-home.jsonnet.test-args/media/plex/deployment.yaml
"apiVersion": "apps/v1"
"kind": "Deployment"
"metadata":
  "name": "plex"
  "namespace": "default"
"spec":
  "replicas": 1
  "selector":
    "matchLabels":
      "name": "plex"
  "strategy":
    "type": "Recreate"
  "template":
    "metadata":
      "labels":
        "name": "plex"
    "spec":
      "containers":
      - "env":
        - "name": "PLEX_CLAIM"
          "value": "baz"
        - "name": "TZ"
          "value": "Europe/Berlin"
        - "name": "ADVERTISE_IP"
          "value": "http://plex.d.42o.de:32400/"
        "image": "plexinc/pms-docker:1.22.0.4163-d8c4875dd"
        "name": "plex"
        "ports":
        - "containerPort": 32469
        - "containerPort": 1900
          "protocol": "UDP"
        - "containerPort": 32410
          "protocol": "UDP"
        - "containerPort": 32411
          "protocol": "UDP"
        - "containerPort": 32412
          "protocol": "UDP"
        - "containerPort": 32413
          "protocol": "UDP"
        - "containerPort": 3005
        - "containerPort": 8324
        "volumeMounts":
        - "mountPath": "/config"
          "name": "plex"
        - "mountPath": "/data"
          "name": "media"
        - "mountPath": "/transcode"
          "name": "transcode"
      "hostNetwork": true
      "hostname": "plex"
      "volumes":
      - "name": "plex"
        "persistentVolumeClaim":
          "claimName": "plex"
      - "hostPath":
          "path": "/pool-mirror/media"
        "name": "media"
      - "emptyDir": {}
        "name": "transcode"
