applier/build/5pi-home.jsonnet.test-args/media/plex/service.yaml
"apiVersion": "v1"
"kind": "Service"
"metadata":
  "name": "plex"
  "namespace": "default"
"spec":
  "ports":
  - "name": "http"
    "port": 32400
    "targetPort": 32400
  - "name": "dlna-tcp"
    "port": 32469
    "targetPort": 32469
  - "name": "dlna-udp"
    "port": 1900
    "protocol": "UDP"
    "targetPort": 1900
  - "name": "gdm-1"
    "port": 32410
    "protocol": "UDP"
    "targetPort": 32410
  - "name": "gdm-2"
    "port": 32411
    "protocol": "UDP"
    "targetPort": 32411
  - "name": "gdm-3"
    "port": 32412
    "protocol": "UDP"
    "targetPort": 32412
  - "name": "gdm-4"
    "port": 32413
    "protocol": "UDP"
    "targetPort": 32413
  - "name": "plex-ht"
    "port": 3005
    "targetPort": 3005
  - "name": "plex-roku"
    "port": 8324
    "targetPort": 8324
  "selector":
    "name": "plex"
