applier/build/5pi-home.jsonnet.test-args/media/plex/ingress.yaml
"apiVersion": "networking.k8s.io/v1"
"kind": "Ingress"
"metadata":
  "name": "plex"
  "namespace": "default"
"spec":
  "rules":
  - "host": "plex.d.42o.de"
    "http":
      "paths":
      - "backend":
          "service":
            "name": "plex"
            "port":
              "number": 32400
        "path": "/"
        "pathType": "Prefix"
